refactor: Stream에서 불변 리스트를 반환하도록 리팩토링
- Collectors.toList() 대신 Streams.toList() 사용하여 불변 리스트로
  변환하도록 리팩토링